--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ h1 {
     align-items: center;
     margin-left: 400px;
     margin-right: 400px;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 #about img {
@@ -54,21 +56,23 @@ h1 {
     margin-right: 300px;
 }
 
-footer {
+.footer22 {
     display: flex;
 	flex-direction: wrap;
 	justify-content: center;
     align-items: center;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	padding-right: 1em;
-	gap: 1em;
-    padding-left: 1em;
+	padding-top: 2em;
+	padding-bottom: 2em;
+	padding-right: 2em;
+	gap: ;
+    padding-left: 2em;
 	font-size: 14px;
-	color: rgb(49, 44, 44);
-	border-top: 0.5px solid rgb(176, 237, 245);
+	color: rgba(0, 0, 0, 0.582);
+	border-top: 0.5px solid rgb(252, 248, 52);
 }
 
-a{
+
+.footer22 a {
     text-decoration: none;
+    color: rgba(0, 0, 0, 0.596);
 }
