--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ h1 {
     padding: 20px 0px 20px 0px;
 }
 
+h2{font-family: 'Lucida Sans';}
+
 .ela {
     display: flex;
     flex-direction: column;
@@ -30,13 +32,23 @@ h1 {
     margin-top: 3em;
 }
 
+.main22{
+    margin-left: 400px;
+    margin-right: 400px;
+}
+
+h2{
+    text-align: center;
+    margin-top:0;
+}
+
 .find {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 400px;
-    margin-right: 400px;
+   /* margin-left: 400px;
+    margin-right: 400px;*/
     margin-top: 3em;
     margin-bottom: 3em;
 }
@@ -46,15 +58,16 @@ h1 {
 	height: 400px;
     margin: 3em;
     border-radius: 7px;
-    margin-left: 400px;
+
 }
 
 #about {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 300px;
+   
 }
+
 
 .footer22 {
     display: flex;
