--- a/styles.css
+++ b/styles.css
@@ -28,16 +28,19 @@ h2{font-family: 'Lucida Sans';}
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 3em;
-    margin-top: 3em;
+    
 }
 
 .main22{
     margin-left: 400px;
     margin-right: 400px;
+    padding-left:5em;
+    padding-right:5em;
+    border-left:0.5px solid rgb(252, 248, 52); ;
+    border-right: 0.5px solid rgb(252, 248, 52);;
 }
 
-h2{
+h2 {
     text-align: center;
     margin-top:0;
 }
@@ -49,8 +52,7 @@ h2{
     align-items: center;
    /* margin-left: 400px;
     margin-right: 400px;*/
-    margin-top: 3em;
-    margin-bottom: 3em;
+    padding-bottom: 1em;
 }
 
 #about img {
@@ -77,7 +79,7 @@ h2{
 	padding-top: 2em;
 	padding-bottom: 2em;
 	padding-right: 2em;
-	gap: ;
+	gap: 3em;
     padding-left: 2em;
 	font-size: 14px;
 	color: rgba(0, 0, 0, 0.582);
