--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,12 @@ h2{font-family: 'Lucida Sans';}
     
 }
 
-.main22{
+.main22{ 
+    padding: 1em 3em 1em 3em;
     margin-left: 400px;
     margin-right: 400px;
-    padding-left:5em;
-    padding-right:5em;
-    border-left: 3px solid rgba(252, 199, 52, 0.651); 
     border-right: 3px solid rgba(252, 199, 52, 0.651);
+    border-left: 3px solid rgba(252, 199, 52, 0.651);
 }
 
 h2 {
